--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.54.9",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
@@ -27,6 +28,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.5",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1"
   }
